--- a/part_1_mars_news.ipynb
+++ b/part_1_mars_news.ipynb
@@ -206,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
     "with open('Output/article_list.json', 'w') as json_file:\n",
-    "    json.dump(article_list, json_file)"
+    "    json.dump(article_list, json_file, indent=4)"
    ]
   }
  ],
