updated part_2 file

--- a/part_2_mars_weather.ipynb
+++ b/part_2_mars_weather.ipynb
@@ -345,8 +345,8 @@
     "\n",
     "Analyse your dataset by using Pandas functions to answer the following questions:\n",
     "\n",
-    "1. How many months exist on Mars?\n",
-    "2. How many Martian (and not Earth) days worth of data exist in the scraped dataset?\n",
+    "1. How many months exist on Mars? 12 months\n",
+    "2. How many Martian (and not Earth) days worth of data exist in the scraped dataset? 1,867 days\n",
     "3. What are the coldest and the warmest months on Mars (at the location of Curiosity)? To answer this question:\n",
     "    * Find the average the minimum daily temperature for all of the months.\n",
     "    * Plot the results as a bar chart.\n",
